syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = ".;v1";

message Auth {
  string id = 1;
  string fullname = 2;
  string username = 3;
  string password = 4;
  string email = 5;
  bool active = 6;
  bool first_login = 7;
  string status_akun = 8;
  string tokens = 9;
}

message LoginRequest {
  string api = 1;
  string username = 2;
  string password = 3;
}

message LoginResponse {
  string api = 1;
  string tokens = 2;
}

message CreateRequest {
  string api = 1;
  Auth auth = 2;
}

message CreateResponse {
  string api = 1;
  string id = 2;
}

message ReadRequest {
  string api = 1;
  string id = 2;
}

message ReadResponse {
  string api = 1;
  Auth auth = 2;
}

message ReadAllRequest {
  string api = 1;
}

message ReadAllResponse {
  string api = 1;
  Auth auth = 2;
}

message UpdateRequest {
  string api = 1;
  Auth auth = 2;
}

message UpdateResponse {
  string api = 1;
  int64 updated = 2;
}

message DeleteRequest {
  string api = 1;
  string id = 2;
}

message DeleteResponse {
  string api = 1;
  int64 deleted = 2;
}

service AuthService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/register"
      body: "*"
    };
  }

  rpc Read(ReadRequest) returns (ReadResponse) {
    option (google.api.http) = {
      get: "/get/{id}"
    };
  }

  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse) {
    option (google.api.http) = {
      get: "/list"
    };
  }

  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/edit/{auth.id}"
      body: "*"

      additional_bindings {
        patch: "/edit/{auth.id}"
        body: "*"
      }
    };
  }

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/delete/{id}"
    };
  }

}

